--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <url>http://hannonhill.com</url>
     </organization>
     <scm>
-        <connection>scm:git:git://github.com/hannonhill/Webservices-Java-Sample-Project.git</connection>
-        <url>https://github.com/hannonhill/Webservices-Java-Sample-Project</url>
+        <connection>scm:git:git://github.com/diliplanke/HannonHill.git</connection>
+        <url>https://github.com/diliplanke/HannonHill.git</url>
     </scm>
 </project>
